force-app/main/default/objects/student_test__c/student_test__c.object-meta.xml
<CustomObject>
    <label>Student Test</label>
    <nameField>
        <label>Student  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students Test</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>