force-app/main/default/objects/student_test__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Enter the email of the student</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>