force-app/main/default/objects/student_test__c/fields/RollNo__c.field-meta.xml
<CustomField>
    <fullName>RollNo__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>RollNo</label>
    <type>AutoNumber</type>
</CustomField>