force-app/main/default/objects/student_test__c/fields/Stream__c.field-meta.xml
<CustomField>
    <fullName>Stream__c</fullName>
    <description>Enter the Stream of the student</description>
    <label>Stream</label>
    <length>18</length>
    <type>Text</type>
</CustomField>